# grindbot

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  fucking error.txt  pyproject.toml  setup.py
.claude/: settings.local.json
.grindbot/: codebase_map.json
.grindbot/memory/: belief_archive.yaml  executor.yaml  merge.yaml  orchestrator.yaml  reviewer.yaml  scanner.yaml
.grindbot/sessions/grind-2026-04-10-2c87/: events.jsonl  session_summary.md  world_model.json
.grindbot/sessions/grind-2026-04-10-679c/: events.jsonl  session_summary.md  world_model.json
.grindbot/sessions/grind-2026-04-10-693b/: events.jsonl  session_summary.md  world_model.json
.grindbot/sessions/grind-2026-04-10-ceff/: events.jsonl  session_summary.md  world_model.json
.grindbot/sessions/grind-2026-04-11-046c/: events.jsonl  session_summary.md  world_model.json
.grindbot/sessions/grind-2026-04-11-2706/: events.jsonl  session_summary.md  world_model.json
.grindbot/sessions/grind-2026-04-11-567e/: events.jsonl  session_summary.md  world_model.json
.grindbot/sessions/grind-2026-04-11-617f/: events.jsonl  session_summary.md  world_model.json
.grindbot/sessions/grind-2026-04-11-81bf/: events.jsonl  world_model.json
e2b/: Dockerfile  build_dev.py  e2b.toml  template.py
grindbot/: __init__.py  brain.py  cli.py  codebase_map.py  config.py  executor.py  firecracker_vm.py  memory.py  planner.py  reflector.py  remote_worker.py  reporter.py  sandbox.py  scanner.py  validator.py  worktree.py
termmux/: .gitignore  .npmrc  package-lock.json  package.json
termmux/src/main/: index.js  (+1 more)
(+87 files in other folders)
